Fix global text-align center rule - change to left alignment

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
 #root {
   width: 100%;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
 }
 
 .app {
